# auction-app

./: .env.example  .env.local  .gitignore  package.json
contracts/auction-contract/: .gitignore  Cargo.toml  README.md  deploy.sh  test.sh
contracts/auction-contract/src/: lib.rs
public/contracts/: auction_contract.wasm
src/app/: layout.tsx  page.tsx
src/app/auctions/: page.tsx
src/app/create/: page.tsx
src/components/: AuctionDisplay.tsx  EventFeed.tsx  GlobalErrorDisplay.tsx  Layout.tsx  PlaceBidForm.tsx  TransactionHistory.tsx  TransactionStatusIndicator.tsx  WalletConnection.tsx
src/context/: ErrorContext.tsx  WalletContext.tsx
src/hooks/: useAuctionContract.ts  useAuctionEvents.ts  useTransactionTracker.ts
src/utils/: contract.ts  errors.ts  events.ts  stellar.ts  transaction.ts
